# IEN

./: Patents  README.md  Web3.0之道：内容中心语义化NFT链网.md
IEN code/: CMakeLists.txt  CMakeSettings.json  cconfig.cmake
IEN code/md/: IEN协议编解码实现.md  IEN协议设计的基本概念.md  IEN协议设计目的.md
IEN code/src/libien/: CMakeLists.txt  ien.h  stack.cpp  stack.h
IEN code/src/libien/base/: base.h  crypto.cpp  crypto.h  endpoint.cpp  endpoint.h  peer_info.cpp  peer_info.h  peer_store.cpp  peer_store.h
IEN code/src/libien/common/: atomic.c  atomic.h  atomic_gcc.h  atomic_msvc.h  basic_type.h  bucky_time.c  buffer.cpp  buffer.h  buffer_stream.cpp  buffer_stream.h  common.h  compiler_specific.h  e_int.h  global_config.h  list.c  list.h  platform_headers.h  platform_specific.h  random.c  random.h  random_posix.inl  random_win.inl  result.h  seq.cpp  seq.h  time.h  time_posix.inl  time_win.inl
IEN code/src/libien/history/: keymanager.h
IEN code/src/libien/interface/: net_manager.cpp  net_manager.h  tcp_interface.cpp  tcp_interface.h  udp_interface.cpp  udp_interface.h
IEN code/src/libien/protocol/: encode.cpp  encode.h  package.cpp  package.h  package.imp.inl  protocol.h
IEN code/src/libien/sn_client/: call_session.cpp  call_session.h  client.cpp  client.h  ping.cpp  ping.h
IEN code/src/libien/thread/: at_exit.cpp  at_exit.h  common_thread.cpp  msg_manager.cpp  msg_manager.h  sys_adapter.h  thread.h  thread_info.cpp  thread_info.h  thread_manager.cpp  thread_manager.h  thread_proxy.cpp  timer.cpp  (+3 more)
IEN code/src/libuv-1.29.1/: AUTHORS  CMakeLists.txt  CONTRIBUTING.md  CTestTestfile.cmake  ChangeLog  MAINTAINERS.md  Makefile.am  README.md  SUPPORTED_PLATFORMS.md  android-configure-arm  android-configure-arm64  android-configure-x86  android-configure-x86_64  appveyor.yml  autogen.sh  cmake_install.cmake  common.gypi  configure.ac  gyp_uv.py  libuv.pc.in  uv.gyp
IEN code/src/mbedtls-2.16.1/: CMakeLists.txt  ChangeLog
IEN code/src/sqlite3-3.29.0/: CMakeLists.txt  Makefile  cmake_install.cmake  shell.c  sqlite3.h
IEN code/src/zlib-1.2.11/: CMakeLists.txt  gzread.c  gzwrite.c
(+214 files in other folders)
